--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>PrimeNG - Atlantis</title>
+    <title>To Bless</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-   
+
     <link rel="stylesheet" type="text/css" href="assets/layout/styles/layout/preloading.css">
     <link id="theme-link" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/theme-dark/magenta/theme.css">
-   
+
 </head>
 
 <body>
